--- a/appspec.yml
+++ b/appspec.yml
@@ -11,15 +11,23 @@ permissions:
     owner: ec2-user
     group: ec2-user
 hooks:
-  BeforeInstall:
-    - location: deploy_scripts/install.sh
-      runas: ec2-user
-  ApplicationStop:
-    - location: deploy_scripts/stop.sh
-      runas: ec2-user
-  ApplicationStart:
-    - location: deploy_scripts/start.sh
-      runas: ec2-user
-  ValidateService:
-    - location: deploy_scripts/validate.sh
-      runas: ec2-user
+    BeforeInstall:
+        - location: deploy_scripts/install.sh
+          timeout: 300
+          runas: ec2-user
+    AfterInstall:
+        - location: deploy_scripts/change_permissions.sh
+          timeout: 300
+          runas: root
+    ApplicationStop:
+        - location: deploy_scripts/stop.sh
+          timeout: 300
+          runas: ec2-user
+    ApplicationStart:
+        - location: deploy_scripts/start.sh
+          timeout: 300
+          runas: ec2-user
+    ValidateService:
+        - location: deploy_scripts/validate.sh
+          timeout: 300
+          runas: ec2-user
